<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="account_registration_identifier_email">Email</string>
    <string name="account_registration_identifier_phonenumber">Telephone number</string>
    <string name="administration_request_dialog_button_negative">Refuse</string>
    <string name="administration_request_dialog_button_positive">Authorize</string>
    <string name="administration_request_dialog_message">%1$s would like permission to administer your app and to invite you to channels and groups. Authorize?</string>
    <string name="administration_request_dialog_title">App Management</string>
    <string name="android_notification_newMessage_message">You have %1$d new messages</string>
	<string name="askBrabblerSwitch_labelDescription">As we\'ve recently informed you, SIMSme Business (now ginlo Business) has been handed over to Brabbler AG. That\'s why we\'d like to ask for your consent (a) to transfer your contract and (b) to transfer your inventory, traffic, and message data to Brabbler Secure Message and Data Exchange AG (Brabbler AG) so that you can continue to use the messenger without restriction and to the same extent.\nYour consent is voluntary, but if you don\'t give this consent, sending messages will no longer be possible as of %1$s and your account will be deactivated by %2$s. Further information on consent and your rights can be found %3$s.\nThank you!\nYour SIMSme Team</string>
	<string name="askBrabblerSwitch_labelDescription_link_url">http://sims.me/datenuebergang/business/en</string>
	<string name="askBrabblerSwitch_reminder1_message">You\'d like to continue using SIMSme Business (now ginlo Business) in the future? We\'re happy about that! So, don\'t wait and switch to Brabbler AG now.</string>
	<string name="askBrabblerSwitch_reminder2_message">Haven\'t had time yet to give your consent? Please take some time to agree to the provider change to Brabbler AG in order to continue using SIMSme Business (now ginlo Business).</string>
	<string name="askBrabblerSwitch_reminder3_message">Please agree to the provider change to Brabbler AG. Otherwise, you\'ll no longer be able to send messages as of now. And that would be a real pity. If you no longer want to use ginlo Business, please create a backup of your data.</string>
	<string name="askBrabblerSwitch_reminder4_message">If you want to send messages again with ginlo Business or create a backup of your data, please agree to the transfer of your contract to Brabbler AG now.</string>
	<string name="settings_brabblerSwitchInfo_cell_text">Your consent to the transfer of your data is required so that you can continue to use the messenger without restriction.</string>
    <string name="backup_button_guid_hint">You will need this key to restore your backup later. Please keep it secure. Alternatively, you can use the QR code below.</string>
    <string name="backup_button_guid_title">Your backup key is:</string>
    <string name="backup_password_empty">Please set a password!</string>
    <string name="backup_restore_confirm_wo_desc">Warning: When you confirm the new registration you will overwrite your existing account. This action cannot be undone.\nIt is not possible to restore from backup later.</string>
    <string name="backup_restore_instructions">Enter your backup password and a backup key here.</string>
	<string name="backup_restore_title_no_backups_found">We couldn\'t find a backup.</string>
	<string name="backup_restore_desc_no_backups_found">However, you can create one now if you\'re still logged in to ginlo Business on another device. It works like this:</string>
	<string name="backup_restore_no_backups_found_step1">Open your old SIMSme Business installation</string>
	<string name="backup_restore_title_register_to_drive">Now let\'s find your backup.</string>
	<string name="backup_restore_desc_drive_connection_failed_register">Using your backup, you can get your existing content in here.</string>
    <string name="backup_set_password_hint">You can set a password for backup recovery here. This password will not be stored. If you forget it, your backup can not be restored. For this reason, do not forget your password!</string>
    <string name="business_trial_button_enter_code">Enter login code</string>
    <string name="business_trial_button_test_now">Test now</string>
    <string name="business_trial_days">days test for free</string>
	<string name="business_trial_days30">30</string>
    <string name="business_trial_dialog_trial_expired">The 30-day test license has expired.</string>
    <string name="business_trial_header">SIMSme Business is now available for a free 30-day trial</string>
    <string name="business_trial_text">If you already hold a valid SIMSme Business license, please enter it now.</string>
    <string name="business_trial_title">Test for Business</string>
    <string name="chat_contact_is_blocked">Warning: You cannot receive any messages from this contact because this contact has been blocked.</string>
    <string name="chat_contact_is_blocked_alert">Warning: The chat partner has been blocked.</string>
    <string name="chat_decline_invitation_text">Are you sure you want to reject this chat request and block the contact?</string>
    <string name="chat_decline_invitation_text_group">Are you sure you want to reject this group request?</string>
    <string name="chat_distributor_overwrite_message">Would you like to replace the existing text?</string>
    <string name="chat_distributor_select_contacts_first">Please select one or more contacts before sending.</string>
	<string name="chat_file_open_warning_text">The file will be sent unencrypted to an unknown application! It will leave the secure area!</string>
    <string name="chat_group_button_delete_confirm">Are you sure you want to delete this group?</string>
    <string name="chat_group_leave_confirm">Are you sure you want to leave this group? All group members will be notified.</string>
    <string name="chat_group_leave_confirm_admin">Are you sure you want to delete this group? All group members will be notified that you deleted to group.</string>
    <string name="chat_group_name_empty">Please enter a group name.</string>
    <string name="chat_group_wasDeleted">This group no longer exists – please create a new group.</string>
    <string name="chat_sendmessage_ownGuid">You cannot send yourself a message</string>
	<string name="chat_overview_invite_friends_popup_text_second">You seem to enjoy using SIMSme Business.\nDo you want to invite more contacts?</string>
	<string name="chat_forward_message_toast_msg">We\'re sorry, but something went wrong while forwarding your message. Please contact our Customer Care at b2b-support@ginlo.net.</string>
    <string name="chats_contact_unknown">Unknown users</string>
    <string name="chats_overview_absence_alert">Your absence notice is still active. Do you want to review the absence now? </string>
    <string name="chats_overview_absence_alert_deactivate">Review the absence</string>
    <string name="chats_overview_absence_alert_title">The absence notice is still active.</string>
    <string name="chats_overview_warning_license">Attention! Your license expires in %1$s days.</string>
    <string name="chats_overview_warning_license_button">New license code</string>
    <string name="chats_selfdestruction_invalid_date">Please select a date in the future</string>
    <string name="chats_showPicture_pleaseTouch">Touch the screen\nto display the image</string>
    <string name="chats_showText_pleaseTouch">Touch the screen\nto display the message</string>
    <string name="chats_showVideo_pleaseTouch">Touch the screen\nto play the video</string>
    <string name="connecting_playstore_failed">Unable to connect to the Play Store.</string>
	<string name="contact_list_invite_contact">Invite contact</string>
	<string name="contact_list_no_contacts_at_all">There are no contacts in the phone book.</string>
    <string name="contacts_activity_company_addressbook_text">When you specify your email address, SIMSme can automatically find your colleagues with the same email domain. Your address is saved on our server in encrypted form.</string>
    <string name="contacts_activity_company_addressbook_text2">Unfortunately, we have not found any contacts whose professional email address with the %1$s domain is linked with the account.\n\nAdvise colleagues who are already using SIMSme to link an email address.</string>
    <string name="contacts_activity_company_addressbook_title">Expand your network</string>
    <string name="contacts_activity_pager_company_addressbook_title">Email directory</string>
    <string name="contacts_activity_pager_contacts_title">Phone book</string>
	<string name="contacts_eMailMessageSubject">Join me on ginlo Business, the secure business messenger</string>
    <string name="contacts_eMailMessageBody">Hi!\nI want to invite you to SIMSme Business. This is THE secure messenger specifically for companies.\nUse the following to speed up communication with contacts and colleagues:\n- Faster exchange on the team – individual and group chats, channels and distribution lists\n- Simple sharing of contents – video and audio messages, photos and documents\n- Working efficiently with colleagues – commenting, prioritising and delayed sending\n- Available on all devices – computers, tablets and smartphones\nDownload the app now at https://www.sims.me/businessdl and try it out.\nKind regards</string>
    <string name="contacts_error_verifyingContactByQRCodeFailed">QR code validation has failed. Please try again.</string>
    <string name="contacts_smsMessageBody">Join me on ginlo, the secure messenger for private and confidential communication - made in Germany. Download it here: ginlo.net/join</string>
    <string name="dialog_email_activiation_code_sent_text">We have sent an activation code to the following address: %1$s.</string>
    <string name="dialog_email_verfication_code_too_short">The activation code must consist of four alphanumeric characters.</string>
    <string name="dialog_email_verfication_succeeded">Your email address %1$s has been successfully linked to your account.</string>
    <string name="dialog_licence_check">Verifying that a license is available for your phone number</string>
    <string name="dialog_licence_is_about_to_expire_negative">Remind me later</string>
    <string name="dialog_licence_is_about_to_expire_positive">Extend license</string>
    <string name="dialog_licence_is_about_to_expire_text">Your license will expire in less than a week. Please request a license extension from your administrator.</string>
    <string name="dialog_licence_is_about_to_expire_title">License expires soon</string>
    <string name="enter_email_activation_button_text">Email verification</string>
    <string name="enter_email_activation_code_hint1">Check your email inbox. We have sent a confirmation code to %1$s. Please enter the code here.</string>
    <string name="enter_email_activation_code_hint2">Leave this window open while you access your email inbox. Have you not received an email? Please also check your spam folder or request a new confirmation code.</string>
	<string name="enter_licence_code_header">Enter your login code.</string>
    <string name="enter_licence_warning_no_licence_found">Unfortunately, we weren\'t able to find a valid licence for this telephone number.</string>
    <string name="profile_info_email_button_reregister_mail">Link new email</string>
    <string name="purchase_licence_hint">Get a license now and enjoy the benefits of SIMSme Business.</string>
    <string name="purchase_licence_title">Purchase licence</string>
    <string name="purchse_licence_button_enter_licence_code">Enter the login code</string>
    <string name="purchse_licence_button_restore_purchases">Restore purchases</string>
</resources>