<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/company_addressbook_no_contacts_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/gfx_mail_add" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/company_addressbook_no_contacts_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="6sp"
                    android:lines="1"
                    android:text="@string/contacts_activity_company_addressbook_title"
                    app:styledTextSize="subTitleTextSize" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/company_addressbook_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:letterSpacing="-0.02"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/contacts_activity_company_addressbook_text"
                    app:styledTextSize="messageTextSize"

                    />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRegisterEmailClick"
                android:text="@string/enter_email_activation_button_text"
                app:styledButtonType="normal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_contacts_business_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ListView
            android:id="@+id/company_addressbook_list_view"
            style="@style/ContactListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null" />
    </LinearLayout>

</LinearLayout>